--- a/Curs01/Ex08/scss/app.scss
+++ b/Curs01/Ex08/scss/app.scss
@@ -30,3 +30,35 @@
 
   background-color: purple;
 }
+
+.circles {
+  margin: auto;
+  width: 80%;
+  border: 1px solid black;
+}
+
+.circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: brown;
+  border: 1px solid black;
+}
+
+.circle-red {
+  @extend .circle;
+
+  background-color: red;
+}
+
+.circle-green {
+  @extend .circle;
+
+  background-color: green;
+}
+
+.circle-blue {
+  @extend .circle;
+
+  background-color: blue;
+}
