--- a/Curs02/Ex06/scss/app.scss
+++ b/Curs02/Ex06/scss/app.scss
@@ -9,3 +9,13 @@
   height: 150px;
   border: 1px solid #000;
 }
+
+$borderStyles: dotted, solid, dashed, double, none;
+
+@each $borderStyle in $borderStyles {
+  .b-#{$borderStyle} {
+    border-style: $borderStyle;
+  }
+}
+
+//punctul 2 live dotted, solid, dashed, double si none
