--- a/Curs09/Ex03/css/style.css
+++ b/Curs09/Ex03/css/style.css
@@ -48,3 +48,19 @@ body {
   color: #fff;
 }
 /* do not touch this */
+
+.flex-container-01 {
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.flex-container-02 {
+  flex-direction: column-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.flex-container-03 {
+  flex-direction: column-reverse;
+}
