--- a/Curs09/Ex05/css/style.css
+++ b/Curs09/Ex05/css/style.css
@@ -48,3 +48,15 @@ body {
   color: #fff;
 }
 /* do not touch this */
+
+/* pct 4 */
+
+.flex-container-04 {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.flex-container-04 :nth-child(5) {
+  align-self: flex-start;
+}
