--- a/Curs02/Ex04/css/style.css
+++ b/Curs02/Ex04/css/style.css
@@ -42,4 +42,24 @@
   background-color: gray;
 }
 
+.box-01 {
+  height: 155px;
+  width: 155px;
+}
+
+.box-02 {
+  height: 160px;
+  width: 160px;
+}
+
+.box-03 {
+  height: 165px;
+  width: 165px;
+}
+
+.box-04 {
+  height: 170px;
+  width: 170px;
+}
+
 /*# sourceMappingURL=style.css.map */
