--- a/Curs09/Ex03/css/style.css
+++ b/Curs09/Ex03/css/style.css
@@ -63,4 +63,22 @@ body {
 
 .flex-container-03 {
   flex-direction: column-reverse;
+  justify-content: space-between;
+}
+
+.flex-container-04 {
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+}
+
+.flex-container-05 {
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-container-06 {
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: flex-end;
 }
