--- a/Curs02/Ex05/scss/app.scss
+++ b/Curs02/Ex05/scss/app.scss
@@ -9,3 +9,19 @@
   height: 150px;
   border: 1px solid #000;
 }
+
+@for $i from 1 to 10 {
+  .box-#{$i} {
+    border-width: #{$i}px;
+  }
+}
+
+@for $i from 1 through 9 {
+  .box-#{$i} {
+    @if $i % 2 == 0 {
+      background-color: gray;
+    } @else {
+      border-style: dotted;
+    }
+  }
+}
