--- a/Curs09/Ex04/css/style.css
+++ b/Curs09/Ex04/css/style.css
@@ -65,3 +65,39 @@
 
 /* !! ia si invata horrorul asta: .flex-time:nth-of-type(1) --> cu asta el ia primul elem adica div
 pentru ca el se uita la numele elementului*/
+
+.flex-container-01 {
+  align-items: flex-end;
+  justify-content: space-around;
+}
+
+.flex-container-01 :nth-child(4) {
+  align-self: center;
+}
+
+.flex-container-04 {
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.flex-container-04 :last-child {
+  align-self: center;
+}
+
+.flex-container-05 {
+  align-items: center;
+  justify-content: space-between;
+}
+
+.flex-container-05 #flex-item-5-3 {
+  align-self: stretch;
+}
+
+.flex-container-06 {
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.flex-container-06 .flex-item {
+  align-self: flex-end;
+}
