--- a/Curs09/Ex05/css/style.css
+++ b/Curs09/Ex05/css/style.css
@@ -60,3 +60,53 @@ body {
 .flex-container-04 :nth-child(5) {
   align-self: flex-start;
 }
+
+.flex-container-01 {
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.flex-container-01 :last-child {
+  align-self: flex-start;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-container-02 :nth-of-type(5) {
+  align-self: flex-end;
+}
+
+.flex-container-03 {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+
+.flex-container-03 :nth-child(4) {
+  align-self: stretch;
+}
+
+.flex-container-05 {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.flex-container-05 :nth-child(4) {
+  align-self: stretch;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+
+.flex-container-06 :nth-child(3) {
+  align-self: flex-end;
+}
