--- a/Curs09/Ex10/css/style.css
+++ b/Curs09/Ex10/css/style.css
@@ -45,3 +45,55 @@
 .flex-container-03 :nth-child(4) {
   order: 1;
 }
+
+.flex-container-01 {
+  flex-direction: row-reverse;
+}
+
+.flex-container-01 :nth-child(2) {
+  order: 1;
+}
+
+.flex-container-02 :last-child {
+  order: -2;
+}
+
+.flex-container-04 :nth-child(3) {
+  order: -1;
+}
+
+.flex-container-04 :nth-child(2) {
+  order: 1;
+}
+
+.flex-container-04 :nth-child(5) {
+  order: 2;
+}
+
+.flex-container-04 :nth-child(4) {
+  order: 3;
+}
+
+.flex-container-05 {
+  flex-direction: row-reverse;
+}
+
+.flex-container-05 :nth-child(4) {
+  order: -1;
+}
+
+.flex-container-05 :nth-child(3) {
+  order: 1;
+}
+
+.flex-container-05 :last-child {
+  order: 2;
+}
+
+.flex-container-05 :nth-child(2) {
+  order: 3;
+}
+
+.flex-container-06 :nth-child(3) {
+  order: -1;
+}
