--- a/Curs09/Ex07/css/style.css
+++ b/Curs09/Ex07/css/style.css
@@ -62,3 +62,55 @@ body {
 .flex-container-03 :nth-of-type(4) {
   flex-grow: 1;
 }
+
+.flex-container-01 {
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.flex-container-01 :nth-child(5) {
+  flex-grow: 1;
+}
+
+.flex-container-01 :nth-child(3) {
+  flex-grow: 2;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.flex-container-02 :nth-child(2) {
+  flex-grow: 1;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.flex-container-04 :nth-child(2) {
+  flex-grow: 1;
+}
+
+.flex-container-05 {
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.flex-container-05 :nth-child(3) {
+  flex-grow: 2;
+}
+.flex-container-05 :nth-child(4) {
+  flex-grow: 1;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.flex-container-06 :nth-child(5) {
+  flex-grow: 1;
+}
