--- a/Curs09/Ex09/css/style.css
+++ b/Curs09/Ex09/css/style.css
@@ -57,3 +57,77 @@ body {
   left: 10px;
 }
 /* do not touch this */
+
+.flex-container-01 {
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.flex-container-01 :nth-child(2) {
+  flex-shrink: 2;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.flex-container-02 :nth-child(2) {
+  align-self: flex-start;
+  flex-shrink: 2;
+}
+
+.flex-container-02 :last-child {
+  align-self: flex-end;
+  flex-shrink: 3;
+}
+
+.flex-container-03 {
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.flex-container-03 :nth-child(3) {
+  flex-shrink: 2;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-container-04 :nth-child(3) {
+  flex-shrink: 3;
+}
+
+.flex-container-04 :nth-child(4) {
+  flex-shrink: 2;
+}
+
+.flex-container-05 {
+  flex-direction: column-reverse;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+
+.flex-container-05 :nth-child(4) {
+  flex-shrink: 2;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-container-06 :nth-child(2) {
+  align-self: flex-start;
+}
+
+.flex-container-06 :last-child {
+  align-self: flex-end;
+  flex-shrink: 2;
+}
