--- a/thread_affair/src/scss/index.scss
+++ b/thread_affair/src/scss/index.scss
@@ -1,5 +1,22 @@
-// @import '~bootstrap/scss/bootstrap';
-// @import '~@fortawesome/fontawesome-free/scss/fontawesome';
-// @import '~@fortawesome/fontawesome-free/scss/brands';
-// @import '~@fortawesome/fontawesome-free/scss/regular';
-// @import '~@fortawesome/fontawesome-free/scss/solid';
+//font-aswesome
+$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+
+//fonts
+@import './fonts';
+
+// bootstrap
+@import '~bootstrap/scss/bootstrap-reboot';
+@import '~bootstrap/scss/utilities';
+
+// common
+@import './reset';
+@import './variables';
+
+body {
+  font-family: 'Roboto', sans-serif;
+  color: $gray-primary;
+}
