thread-aff css live 3

--- a/thread_affair/src/scss/index.scss
+++ b/thread_affair/src/scss/index.scss
@@ -9,8 +9,9 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import './fonts';
 
 // bootstrap
+@import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/bootstrap-reboot';
-@import '~bootstrap/scss/utilities';
+@import '~bootstrap/scss/bootstrap-utilities';
 
 // common
 @import './reset';
@@ -20,3 +21,6 @@ body {
   font-family: 'Roboto', sans-serif;
   color: $gray-primary;
 }
+
+@import './shared/index';
+@import './homepage/index';
