thread aff live 4 - mobile done

--- a/thread_affair/src/scss/_variables.scss
+++ b/thread_affair/src/scss/_variables.scss
@@ -5,8 +5,11 @@ $brand-secondary: #2f4766;
 //grays
 $gray-primary: #707070;
 $gray-secondary: #aeaeae;
-$gray-tertiary: #292929;
+$gray-tertiary: #363636;
 
 // non-colors
 $black: #000;
 $white: #fff;
+
+// misc
+$misc-purple: #1b1927;
