--- a/thread_affair/src/scss/homepage/_home-newsletter.scss
+++ b/thread_affair/src/scss/homepage/_home-newsletter.scss
@@ -14,6 +14,7 @@
 
     @include media-breakpoint-up('md') {
       flex-direction: row;
+      justify-content: space-between;
     }
 
     label {
@@ -44,6 +45,10 @@
 
       &::placeholder {
         color: $gray-secondary;
+      }
+
+      @include media-breakpoint-up('md') {
+        width: 32.52351%;
       }
     }
 
