--- a/thread_affair/src/scss/homepage/_index.scss
+++ b/thread_affair/src/scss/homepage/_index.scss
@@ -16,6 +16,12 @@
         color: $brand-primary;
         font-weight: 300;
         text-transform: capitalize;
+        font-size: 35px;
+
+        @include media-breakpoint-up('md') {
+          font-size: 30px;
+          color: $black;
+        }
 
         span {
           font-weight: 400;
@@ -35,6 +41,10 @@
       &:nth-of-type(2) {
         & > header {
           display: none;
+
+          @include media-breakpoint-up('md') {
+            display: block;
+          }
         }
 
         .product-tile {
@@ -43,7 +53,18 @@
           }
 
           display: none;
+
+          @include media-breakpoint-up('md') {
+            display: block;
+          }
         }
+      }
+    }
+
+    .product-tiles {
+      @include media-breakpoint-up('md') {
+        display: flex;
+        justify-content: space-between;
       }
     }
   }
