--- a/Curs11/Ex04/css/style.css
+++ b/Curs11/Ex04/css/style.css
@@ -18,3 +18,23 @@
 }
 /* can't touch this 🔨 */
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 180px);
+  grid-template-rows: 200px 200px repeat(2, 200px);
+}
+
+.grid-item-1 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.grid-item-2 {
+  grid-column: 4 / 5;
+  grid-row: -5 / -3;
+}
+
+.grid-item-3 {
+  grid-column: 2 / 5;
+  grid-row: 3 / -1;
+}
