--- a/Curs07/Ex03/css/anim2.css
+++ b/Curs07/Ex03/css/anim2.css
@@ -20,23 +20,26 @@ body {
 }
 
 .spinner__box:nth-child(1) {
-  animation-delay: 0s;
+  animation-delay: 0.2s;
+  background-color: black;
 }
 
 .spinner__box:nth-child(2) {
-  animation-delay: 0.2s;
+  animation-delay: 0.3s;
+  background-color: red;
 }
 
 .spinner__box:nth-child(3) {
   animation-delay: 0.4s;
+  background-color: blue;
 }
 
 @keyframes load {
   from {
-    top: 0;
+    right: 0;
   }
 
   to {
-    top: -15px;
+    left: -20px;
   }
 }
