--- a/Curs11/Ex03/css/style.css
+++ b/Curs11/Ex03/css/style.css
@@ -6,3 +6,8 @@
 }
 /* can't touch this 🔨 */
 
+.grid-container {
+  display: grid;
+  grid-template-rows: 50px 150px 175px;
+  grid-template-columns: 250px 1fr 150px;
+}
