--- a/Curs11/Ex04/css/style.css
+++ b/Curs11/Ex04/css/style.css
@@ -20,8 +20,8 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 180px);
-  grid-template-rows: 200px 200px repeat(2, 200px);
+  grid-template-columns: 180px 180px 180px 180px;
+  grid-template-rows: 200px 200px 200px 200px;
 }
 
 .grid-item-1 {
@@ -31,7 +31,8 @@
 
 .grid-item-2 {
   grid-column: 4 / 5;
-  grid-row: -5 / -3;
+  grid-row-start: 1;
+  grid-row-end: 3;
 }
 
 .grid-item-3 {
