--- a/thread_affair/src/scss/index.scss
+++ b/thread_affair/src/scss/index.scss
@@ -13,6 +13,10 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~bootstrap/scss/bootstrap-reboot';
 @import '~bootstrap/scss/bootstrap-utilities';
 
+// glide js
+@import '~@glidejs/glide/src/assets/sass/glide.core';
+@import '~@glidejs/glide/src/assets/sass/glide.theme';
+
 // common
 @import './reset';
 @import './variables';
